2003-12-15  Justin F. Hallett  <thesin@users.sourceforge.net>

	* PkgVersion.pm: Changed the warning about missing packages in multi
	depends line to still display but only at verbose 4

2003-12-15  Justin F. Hallett  <thesin@users.sourceforge.net>

	* PkgVersion.pm: Stop warning about missing packages in depends line
	if an other pkg in the expression is found to statisfy it.

2003-12-15  Daniel Macks <dmacks@netspace.org>

	* Services.pm: Changed expand_percent to do the automatic %% => %
	with regexps instead of the @PERCENT@ sentinel

2003-12-11  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: Made BuildConflicts effective, it doesn't just tell you
	 now, it's acctually remove and reinstall after the build.

2003-12-10  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: Fixed a problem in the dep engine where if a dep was
	installed but it's deb file was missing, fink would fail.

2003-12-10  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* Engine.pm: If the package name is being truncated in list/apropos
	print an ellipses ("...") so that the user knows about it.

	* Selfupdate.pm: Don't try to su or chown to an undefined $username.
	
2003-12-09  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm: Rearranged the list of allowed fields and added
	some comments to make it easier to compare this list to the
	packaging manual.

2003-12-08  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: Adding "fink splitoffs", shows parent and splitoffs in a
	package. Adding "fink showparent" which will return the parent package
	 of a package.
	* PkgVersion.pm: Adding sub get_splitoffs() has two switches, to
	include self in list and include parent.

2003-12-08  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: Properly fixed essential and builddependsonly checks in
	cmd_remove.

2003-12-07  Justin F. Hallett  <thesin@users.sourceforge.net>
